--- a/src/Components/ProgressBar/ProgressBar.css
+++ b/src/Components/ProgressBar/ProgressBar.css
@@ -7,5 +7,5 @@
 
 .progress-bar-wrapper {
   background-color: #ffffff;
-  padding-bottom: 1.5rem;
+  overflow: hidden;
 }
